--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Pygments==1.6
 astroid==1.0.1
-configparser==3.3.0r2
+configparser>=3.2
 docutils==0.11
 hovercraft==1.1
 logilab-common==0.60.0
-lxml==3.2.3
+lxml>=3
 pylint==1.0.0
 svg.path==1.1
 wsgiref==0.1.2
