--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
-Pygments==1.6
-astroid==1.0.1
-configparser>=3.2
-docutils==0.11
-hovercraft==1.1
-logilab-common==0.60.0
-lxml>=3
-pylint==1.0.0
-svg.path==1.1
-wsgiref==0.1.2
+astroid==3.0.3
+configparser==6.0.0
+dill==0.3.8
+docutils==0.20.1
+hovercraft==2.7
+isort==5.13.2
+logilab-common==2.0.0
+lxml==5.1.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
+platformdirs==4.2.0
+Pygments==2.17.2
+pylint==3.0.3
+setuptools==69.1.0
+svg.path==6.3
+tomlkit==0.12.3
+typing_extensions==4.9.0
+watchdog==4.0.0
